Fix Uploaders z-index for FF and potentially IE11
[Finishes: #129069979](https://www.pivotaltracker.com/story/show/129069979)
[Finishes: #128906029](https://www.pivotaltracker.com/story/show/128906029)
[Finishes: #120619941](https://www.pivotaltracker.com/story/show/120619941)

--- a/src/components/uploaders/Uploader.sass
+++ b/src/components/uploaders/Uploader.sass
@@ -2,6 +2,8 @@
 
 .Uploader
   position: relative
+  z-index: 2
+  background-color: rgba(magenta, 0.4)
 
 .isAvatarUploader
   text-align: center
@@ -17,6 +19,7 @@
   left: 0
   right: 0
   bottom: 0
+  width: 100%
 
 .isXLUploader
   padding-top: rem(240)
@@ -51,6 +54,8 @@
   width: rem(120)
   height: rem(120)
 
+.isSettingsAvatarUploader
+  width: 100%
 
 .UploaderButton
   +sans-typeset
@@ -104,6 +109,9 @@
   .isLGUploader:before
     width: rem(180)
     height: rem(180)
+  .isSettingsAvatarUploader
+    width: 100%
+    max-width: rem(400)
 
 @media(min-width: #{em(1160)})
   .OnboardingCoverPicker .UploaderMessages
